Topic : "Vue Homework" 
Author : GeorgeHsu
CreateDate : 2018-01-20

====================
2018-01-20

Commit ChangeLog.txt
====================
2018-01-20

Commit VueFile
====================
2018-01-20

Add C2F program
====================
2018-01-22

1.Modify C2F page
2.Add LearnComponent by Component
3.Import bootstrap
4.Add component and pages folder
====================
2018-01-23

1.Add Count page
2.Implement Count page by VUEX
====================
2018-01-23

1.Modify Count page multiplicate function 
====================
2018-01-23

1.Add TodoList page and implement CURD function
====================
2018-01-23

1.Modify TodoList page with checkbox component 
====================