@@ -4,6 +4,9 @@ export const getCount = state => { return state.count };
 export const getTodoList = state => { return state.todoList.filter((item) => {
     return !item.done;
 })};
+
 export const getDoneList = state => { return state.todoList.filter((item) => {
     return item.done;
 })};
+
+export const getLearnList = state => { return state.learnList };
